--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@types/react": "^17.0.0",
+    "axios": "^1.7.2",
     "next": "^12.2.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "typescript": "^4.7.0"
+    "typescript": "^4.7.0",
+    "vcc-ui": "^4.8.0"
   },
   "scripts": {
     "dev": "next dev",
