--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "frontend-code-test",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
+ "dependencies": {
     "@types/react": "^17.0.0",
-    "axios": "^1.7.2",
+    "@volvo-cars/css": "^0.39.0",
+    "axios": "^1.5.0",
     "next": "^12.2.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "typescript": "^4.7.0",
-    "vcc-ui": "^4.8.0"
+    "vcc-ui": "^4.6.2"
   },
   "scripts": {
     "dev": "next dev",
